2009-05-27  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Replace !ENABLE_OPTIMIZATIONS with DISABLE_OPTIMIZATIONS
	for clarity, only apply the Nimbus generation patch when
	ENABLE_NIMBUS is on but ENABLE_NIMBUS_GENERATION is off.
	* acinclude.m4:
	(DISABLE_OPTIMIZATIONS): Renamed from ENABLE_OPTIMIZATIONS
	for clarity, and added result message on all paths.
	(AC_CHECK_ENABLE_NIMBUS_GENERATION): Correct message to
	represent current default of no.
	(IT_CHECK_ADDITIONAL_VMS): Refactored to provide output on
	all paths and moved from configure.ac.
	* configure.ac:
	Replace additional-vms code with call to IT_CHECK_ADDITIONAL_VMS
	macro.
	* ports/hotspot/src/cpu/zero/vm/globals_zero.hpp:
	Remove InlineSmallCode and...
	* ports/hotspot/src/cpu/zero/vm/shark_globals_zero.hpp:
	...add it here, only needed for Shark builds.

2009-05-26  Matthias Klose  <doko@ubuntu.com>

	* patches/cacao/launcher.patch: Update for OpenJDK 7.

2009-05-24  Mark Wielaard  <mark@klomp.org>

	* patches/xrender/icedtea-001.patch: Initialize X11SurfaceData
	implicitly, not explicitly.

2009-05-24  Mark Wielaard  <mark@klomp.org>

	* configure.ac (JNLP_ABOUT_NEEDED): New check.
	* Makefile.am (JNLP_ABOUT_TARGET): Set to extra-lib/about.jar
	when needed.
	(stamps/icedtea.stamp): Depend on JNLP_ABOUT_TARGET. Only copy
	about.jar and jnlp resources when needed.
	(stamps/icedtea-debug.stamp): Likewise.
	(stamps/jibx.stamp): Don't depend on extra-lib/about.jar.

2009-05-23  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (LIVECONNECT_DIR): Add -C lib/rt net.
	(rt-closed.jar): Don't unconditionally add -C lib/rt net.

2009-05-22  Andrew John Hughes  <ahughes@redhat.com>

	* ports/hotspot/src/cpu/zero/vm/globals_zero.hpp:
	Define InlineSmallCode, using x86 value to begin with.

2009-05-22  Mark Wielaard  <mark@klomp.org>

	* patches/xrender/icedtea-002.patch: Correct rebase. Add
	Java_sun_java2d_x11_XSurfaceData_isDrawableValid and
	Java_sun_java2d_x11_XSurfaceData_setInvalid back.
